manifests/registry/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-registry
  labels:
    app: private-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-registry
  template:
    metadata:
      labels:
        app: private-registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: auth
              mountPath: /auth
      volumes:
        - name: auth
          secret:
            secretName: registry-auth

---
apiVersion: v1
kind: Service
metadata:
  name: private-registry
spec:
  selector:
    app: private-registry
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-registry
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "containers-letsencrypt"
spec:
  tls:
    - hosts:
        - containers.kesompochy.space
      secretName: containers-kesompochy-tls
  rules:
    - hots: containers.kesompochy.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: private-registry
                port:
                  number: 80

---
apiVersion: v1
kind: Namespace
metadata:
  name: registry
